add_button.First_test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
-  "C_Cpp_Runner.cCompilerPath": "C:/Users/KOS/.platformio/packages/toolchain-atmelavr/bin/avr-gcc.exe",
-  "C_Cpp_Runner.cppCompilerPath": "C:/Users/KOS/.platformio/packages/toolchain-atmelavr/bin/avr-g++.exe",
-  "C_Cpp_Runner.debuggerPath": "C:/Users/KOS/.platformio/packages/toolchain-atmelavr/bin/avr-gdb.exe",
-  "C_Cpp_Runner.cStandard": "c11",
-  "C_Cpp_Runner.cppStandard": "c++11",
+  "C_Cpp_Runner.cCompilerPath": "C:/Users/KOS/.platformio/packages/toolchain-xtensa/bin/xtensa-lx106-elf-gcc.exe",
+  "C_Cpp_Runner.cppCompilerPath": "C:/Users/KOS/.platformio/packages/toolchain-xtensa/bin/xtensa-lx106-elf-g++.exe",
+  "C_Cpp_Runner.debuggerPath": "C:/Users/KOS/.platformio/packages/toolchain-xtensa/bin/xtensa-lx106-elf-gdb.exe",
+  "C_Cpp_Runner.cStandard": "gnu17",
+  "C_Cpp_Runner.cppStandard": "gnu++17",
   "C_Cpp_Runner.msvcBatchPath": "",
   "C_Cpp_Runner.useMsvc": false,
   "C_Cpp_Runner.warnings": [
@@ -40,8 +40,57 @@
   "C_Cpp_Runner.includePaths": [
     "c:/Users/KOS/Documents/PlatformIO/Projects/Temp_SERVO/include",
     "c:/Users/KOS/Documents/PlatformIO/Projects/Temp_SERVO/src",
-    "c:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/cores/esp8266",
-    "c:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/Servo/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266WebServer/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266WiFi/src",
+    "c:/Users/KOS/Documents/PlatformIO/Projects/Temp_SERVO/.pio/libdeps/nodemcuv2/NTPClient",
+    "c:/Users/KOS/Documents/PlatformIO/Projects/Temp_SERVO/.pio/libdeps/nodemcuv2/ServoSmooth/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/Servo/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/tools/sdk/include",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/cores/esp8266",
+    "C:/Users/KOS/.platformio/packages/toolchain-xtensa/include",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/tools/sdk/lwip2/include",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/variants/nodemcu",
+    "C:/Users/KOS/.platformio/lib/Adafruit Unified Sensor_ID31",
+    "C:/Users/KOS/.platformio/lib/AsyncMqttClient-esphome_ID6759/src",
+    "C:/Users/KOS/.platformio/lib/DHT sensor library_ID19",
+    "C:/Users/KOS/.platformio/lib/ESPAsyncTCP-esphome_ID6757/src",
+    "C:/Users/KOS/.platformio/lib/OneWire",
+    "C:/Users/KOS/.platformio/lib/PubSubClient_ID89/src",
+    "C:/Users/KOS/.platformio/lib/RunningAverage_ID1322",
+    "C:/Users/KOS/.platformio/lib/SdFat/src",
+    "C:/Users/KOS/.platformio/lib/arduino-timer_ID5820/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/ArduinoOTA",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/DNSServer/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/EEPROM",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266AVRISP/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266HTTPClient/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266HTTPUpdateServer/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266LLMNR",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266NetBIOS",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266SSDP",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266SdFat/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266WiFiMesh/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266httpUpdate/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266mDNS/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/Ethernet/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/GDBStub/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/Hash/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/I2S/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/LittleFS/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/Netdump/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/SD/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/SDFS/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/SPI",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/SPISlave/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/SoftwareSerial/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/TFT_Touch_Shield_V2",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/Ticker/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/Wire",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/esp8266/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/lwIP_PPP/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/lwIP_enc28j60/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/lwIP_w5100/src",
+    "C:/Users/KOS/.platformio/packages/framework-arduinoespressif8266/libraries/lwIP_w5500/src",
     ""
   ],
   "C_Cpp_Runner.includeSearch": [
@@ -61,5 +110,8 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false
+  "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "files.associations": {
+    "*.tcc": "cpp"
+  }
 }
