--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,7 @@ board = nodemcuv2
 framework = arduino
 lib_deps = 
 	https://github.com/GyverLibs/ServoSmooth.git
+	arduino-libraries/NTPClient @ ^3.2.1
 	; arduino-libraries/Servo@^1.1.8
     ; C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries\Wire
 	; c:\Program Files (x86)\Arduino\hardware\tools\avr\avr\include\avr\
